[package]
name = "aoc2020"
version = "0.1.0"
authors = ["smmalis37@gmail.com"]
edition = "2018"

[dependencies]
paste = "1"
criterion = "0.3"
dhat = "0.2"
serde_scan = "0.4.1"
bytecount = "0.6"
derive_builder = "0.10.0-alpha"
lexical = "5.2"
petgraph = "0.5"
arrayvec = "0.7"
memchr = "2.3"
rustc-hash = "1.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
